  - jack: connect to server on MPD startup
  - jack: added options "client_name", "server_name"
  - jack: clear ring buffers before activating
  - jack: renamed option "ports" to "destination_ports"
  - jack: support more than two audio channels
  - httpd: bind port when output is enabled
  - httpd: added name/genre/website configuration
  - oss: 24 bit support via OSS4
  - wildcards allowed in audio_format configuration
  - consistently lock audio output objects
* player:
  - drain audio outputs at the end of the playlist
* mixers:
  - removed support for legacy mixer configuration
  - reimplemented software volume as mixer+filter plugin
  - per-device software/hardware mixer setting
* commands:
  - added new "status" line with more precise "elapsed time"
* update:
  - automatically update the database with Linux inotify
  - support .mpdignore files in the music directory
  - sort songs by album name first, then disc/track number
  - rescan after metadata_to_use change
* normalize: upgraded to AudioCompress 2.0
  - automatically convert to 16 bit samples
* replay gain:
  - reimplemented as a filter plugin
  - fall back to track gain if album gain is unavailable
  - optionally use hardware mixer to apply replay gain
  - added mode "auto"
* log unused/unknown block parameters
* removed the deprecated "error_file" option
* save state when stopped
* renamed option "--stdout" to "--stderr"
* removed options --create-db and --no-create-db
* state_file: save only if something has changed
* database: eliminated maximum line length
* log: redirect stdout/stderr to /dev/null if syslog is used
* set the close-on-exec flag on all file descriptors
* pcm_volume, pcm_mix: implemented 32 bit support
* support packed 24 bit samples
* CUE sheet support
* support for MixRamp tags
* obey $(sysconfdir) for default mpd.conf location
* build with large file support by default
* added test suite ("make check")
* require GLib 2.12
* added libwrap support


ver 0.15.9 (2010/03/21)