@@ -36,6 +36,7 @@ extern const struct audio_output_plugin mvp_output_plugin;
 extern const struct audio_output_plugin jack_output_plugin;
 extern const struct audio_output_plugin httpd_output_plugin;
 extern const struct audio_output_plugin recorder_output_plugin;
+extern const struct audio_output_plugin win32_output_plugin;
 
 const struct audio_output_plugin *audio_output_plugins[] = {
 #ifdef HAVE_SHOUT
@@ -80,6 +81,9 @@ const struct audio_output_plugin *audio_output_plugins[] = {
 #endif
 #ifdef ENABLE_RECORDER_OUTPUT
 	&recorder_output_plugin,
+#endif
+#ifdef ENABLE_WIN32_OUTPUT
+	&win32_output_plugin,
 #endif
 	NULL
 };
