@@ -58,6 +58,7 @@ ver 0.16 (20??/??/??)
   - httpd: bind port when output is enabled
   - httpd: added name/genre/website configuration
   - oss: 24 bit support via OSS4
+  - win32: new output plugin for Windows Wave
   - wildcards allowed in audio_format configuration
   - consistently lock audio output objects
 * player:
